recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value lenght
	subtree(steps, lenght, angle, shrink);
                       ^